--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@date-io/moment": "^2.13.1",
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/lab": "^5.0.0-alpha.78",
+		"@mui/material": "^5.6.2",
+		"@mui/styled-engine-sc": "^5.6.1",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
@@ -13,6 +19,7 @@
 		"@types/react-dom": "^18.0.1",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
+		"moment": "^2.29.3",
 		"node-sass": "^7.0.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
@@ -22,6 +29,7 @@
 		"react-scripts": "5.0.1",
 		"reactstrap": "^9.0.1",
 		"redux-thunk": "^2.4.1",
+		"styled-components": "^5.3.5",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
 	},
