--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"reactstrap": "^9.0.1",
 		"redux-thunk": "^2.4.1",
 		"styled-components": "^5.3.5",
+		"sweetalert2": "^11.4.9",
+		"sweetalert2-react-content": "^5.0.0",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
 	},
