--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react-dom": "^18.0.1",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
+		"framer-motion": "^6.3.2",
 		"moment": "^2.29.3",
 		"node-sass": "^7.0.1",
 		"react": "^18.0.0",
