--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react-dom": "^18.0.1",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
+		"mdb-ui-kit": "^4.0.0",
 		"moment": "^2.29.3",
 		"node-sass": "^7.0.1",
 		"react": "^18.0.0",
@@ -56,5 +57,6 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"devDependencies": {}
 }
