--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"styled-components": "^5.3.5",
 		"sweetalert2": "^11.4.9",
 		"sweetalert2-react-content": "^5.0.0",
+		"@stripe/react-stripe-js": "^1.7.2",
+		"@stripe/stripe-js": "^1.29.0",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
 	},
