--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL = http://localhost:4001/
+REACT_APP_API_URL = http://95.111.203.4:4001/
 REACT_APP_FE_URL = http://localhost:3000/
 REACT_APP_LOGIN_URL = http://95.111.203.4:3020/Login?redirect=
 REACT_APP_PROFILE_BE = http://95.111.203.4:3010/
