--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"@mui/material": "^5.6.2",
 		"@mui/styled-engine-sc": "^5.6.1",
 		"@reduxjs/toolkit": "^1.6.2",
+		"@stripe/react-stripe-js": "^1.7.2",
+		"@stripe/stripe-js": "^1.29.0",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^13.5.0",
@@ -19,10 +21,12 @@
 		"@types/react-dom": "^18.0.1",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
+		"chart.js": "^3.8.0",
 		"framer-motion": "^6.3.2",
 		"moment": "^2.29.3",
 		"node-sass": "^7.0.1",
 		"react": "^18.0.0",
+		"react-chartjs-2": "^4.1.0",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.3.1",
 		"react-redux": "^7.2.6",
@@ -33,8 +37,6 @@
 		"styled-components": "^5.3.5",
 		"sweetalert2": "^11.4.9",
 		"sweetalert2-react-content": "^5.0.0",
-		"@stripe/react-stripe-js": "^1.7.2",
-		"@stripe/stripe-js": "^1.29.0",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
 	},
