--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-chartjs-2": "^4.1.0",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.3.1",
+		"react-pro-sidebar": "^0.7.1",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.1",
