--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@date-io/moment": "^2.13.1",
-		"@emotion/react": "^11.9.0",
+		"@emotion/react": "^11.8.1",
 		"@emotion/styled": "^11.8.1",
 		"@mui/lab": "^5.0.0-alpha.78",
 		"@mui/material": "^5.6.2",
@@ -12,8 +12,8 @@
 		"@reduxjs/toolkit": "^1.6.2",
 		"@stripe/react-stripe-js": "^1.7.2",
 		"@stripe/stripe-js": "^1.29.0",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.1.1",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.4.1",
 		"@types/node": "^16.11.27",
@@ -22,22 +22,22 @@
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
 		"chart.js": "^3.8.0",
-		"framer-motion": "^6.3.2",
+		"framer-motion": "^4.1.17",
 		"moment": "^2.29.3",
-		"node-sass": "^7.0.1",
-		"react": "^18.0.0",
+		"react": "^17.0.2",
 		"react-chartjs-2": "^4.1.0",
-		"react-dom": "^18.0.0",
+		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"react-pro-sidebar": "^0.7.1",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
-		"react-scripts": "5.0.1",
+		"react-scripts": "4.0.3",
 		"reactstrap": "^9.0.1",
 		"redux-thunk": "^2.4.1",
+		"sass": "^1.52.1",
 		"styled-components": "^5.3.5",
-		"sweetalert2": "^11.4.9",
-		"sweetalert2-react-content": "^5.0.0",
+		"sweetalert2": "^11.2.2",
+		"sweetalert2-react-content": "^4.2.0",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
 	},
