--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"@mui/lab": "^5.0.0-alpha.78",
 		"@mui/material": "^5.6.2",
 		"@mui/styled-engine-sc": "^5.6.1",
+		"@material-ui/core": "^4.11.4",
+		"@material-ui/data-grid": "^4.0.0-alpha.29",
+		"@material-ui/icons": "^4.11.2",
+		"recharts": "^2.0.9",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@stripe/react-stripe-js": "^1.7.2",
 		"@stripe/stripe-js": "^1.29.0",
