--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
 		"@date-io/moment": "^2.13.1",
 		"@emotion/react": "^11.8.1",
 		"@emotion/styled": "^11.8.1",
-		"@mui/lab": "^5.0.0-alpha.78",
-		"@mui/material": "^5.6.2",
-		"@mui/styled-engine-sc": "^5.6.1",
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/data-grid": "^4.0.0-alpha.29",
 		"@material-ui/icons": "^4.11.2",
-		"recharts": "^2.0.9",
+		"@mui/lab": "^5.0.0-alpha.78",
+		"@mui/material": "^5.6.2",
+		"@mui/styled-engine-sc": "^5.6.1",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@stripe/react-stripe-js": "^1.7.2",
 		"@stripe/stripe-js": "^1.29.0",
@@ -25,11 +24,8 @@
 		"@types/react-dom": "^18.0.1",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
-		"chart.js": "^3.8.0",
-		"framer-motion": "^4.1.17",
 		"moment": "^2.29.3",
 		"react": "^17.0.2",
-		"react-chartjs-2": "^4.1.0",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"react-pro-sidebar": "^0.7.1",
@@ -37,6 +33,7 @@
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
 		"reactstrap": "^9.0.1",
+		"recharts": "^2.0.9",
 		"redux-thunk": "^2.4.1",
 		"sass": "^1.52.1",
 		"styled-components": "^5.3.5",
@@ -44,6 +41,9 @@
 		"sweetalert2-react-content": "^4.2.0",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
+	},
+	"resolutions": {
+		"react-error-overlay": "6.0.9"
 	},
 	"scripts": {
 		"start": "react-scripts start",
