--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/node": "^16.11.27",
 		"@types/react": "^18.0.5",
 		"@types/react-dom": "^18.0.1",
+		"@types/uuid": "^8.3.4",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
 		"moment": "^2.29.3",
