--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 		"@types/node": "^16.11.27",
 		"@types/react": "^18.0.5",
 		"@types/react-dom": "^18.0.1",
+		"@types/react-helmet": "^6.1.5",
 		"@types/uuid": "^8.3.4",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
 		"moment": "^2.29.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-helmet": "^6.1.0",
 		"react-icons": "^4.3.1",
 		"react-pro-sidebar": "^0.7.1",
 		"react-redux": "^7.2.6",
