--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_BE_URL = http://localhost:4001/
+REACT_APP_BE_URL = http://localhost:4001/api/
 REACT_APP_LOGIN_URL = https://profile.vinhphancommunity.xyz/Login?redirect=
 REACT_APP_PROFILE_BE = https://profile.vinhphancommunity.xyz/
 REACT_APP_VOUCHER_BE = https://api.votuan.xyz/api/v1/user/voucher/
 
-#DEV_BE http://localhost:4001/
-#HOST_BE http://95.111.203.4:4001/
+#DEV_BE http://localhost:4001/api/
+#HOST_BE http://95.111.203.4:4001/api/
