--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_BE_URL = http://localhost:4001/api/
+REACT_APP_BE_URL = https://apartment.vinhphancommunity.xyz/api/
+REACT_APP_FE_URL = https://apartment.vinhphancommunity.xyz/
 REACT_APP_LOGIN_URL = https://profile.vinhphancommunity.xyz/Login?redirect=
 REACT_APP_PROFILE_BE = https://profile.vinhphancommunity.xyz/
 REACT_APP_VOUCHER_BE = https://api.votuan.xyz/api/v1/user/voucher/
